--- a/library_permiss/src/main/res/values/strings.xml
+++ b/library_permiss/src/main/res/values/strings.xml
@@ -1,62 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="permission_description_title">Permission description</string>
-    <string name="permission_granted">Granted</string>
-    <string name="permission_denied">Denied</string>
+    <string name="permission_description_title">权限描述</string>
+    <string name="permission_granted">授予</string>
+    <string name="permission_denied">拒绝</string>
 
-    <string name="permission_alert">Authorization reminder</string>
-    <string name="permission_fail_hint">Authorization failed, please grant permission correctly</string>
-    <string name="permission_fail_assign_hint">Authorization failed, please grant %s correctly</string>
-    <string name="permission_manual_fail_hint">Failed to obtain permission, please grant permission manually</string>
-    <string name="permission_manual_assign_fail_hint">Failed to obtain permission, please grant %s manually</string>
-    <string name="permission_manual_assign_fail_background_location_hint">Failed to obtain the background location permission, please select %s in the location permission</string>
-    <string name="permission_manual_assign_fail_background_sensors_hint">Failed to obtain the background sensor permission, please select %s in the sensor permission</string>
-    <string name="permission_background_location_fail_hint">Failed to obtain background location permission,\nPlease select %s option</string>
-    <string name="permission_background_sensors_fail_hint">Failed to obtain background sensor permission, please select %s sensor permission</string>
-    <string name="permission_background_default_option_label">Allow all the time</string>
-    <string name="permission_media_location_hint_fail">Failed to get media location permission\nPlease clear app data and try again</string>
-    <string name="permission_goto_setting_page">Go to authorization</string>
+    <string name="permission_alert">授权提醒</string>
+    <string name="permission_fail_hint">权限获取失败，请检查设置并重新授权</string>
+    <string name="permission_fail_assign_hint">授权失败，请正确授予 %s 权限</string>
+    <string name="permission_manual_fail_hint">获取权限失败，请前往设置手动授权</string>
+    <string name="permission_manual_assign_fail_hint">无法获取 %s 权限，请在设置中手动开启</string>
+    <string name="permission_manual_assign_fail_background_location_hint">无法获取后台定位权限，请在定位权限设置中选择 %s </string>
+    <string name="permission_manual_assign_fail_background_sensors_hint">无法获取后台传感器权限，请在权限设置中选择 %s </string>
+    <string name="permission_background_location_fail_hint">后台定位权限获取失败，\n请在权限设置中选择 %s </string>
+    <string name="permission_background_sensors_fail_hint">无法获取后台传感器权限，请在权限设置中选择 %s 权限</string>
+    <string name="permission_background_default_option_label">始终允许</string>
+    <string name="permission_media_location_hint_fail">获取媒体位置权限失败\n请清除应用数据后重试</string>
+    <string name="permission_goto_setting_page">去进行授权</string>
 
-    <string name="permission_unknown">permission</string>
+    <string name="permission_unknown">权限</string>
     <string name="permission_comma">, </string>
     <string name="permission_colon">: </string>
 
-    <string name="permission_calendar">calendar permission</string>
-    <string name="permission_camera">camera permission</string>
-    <string name="permission_contacts">contacts permission</string>
-    <string name="permission_location">location permission</string>
-    <string name="permission_location_background">background location permission</string>
-    <string name="permission_nearby_devices">nearby devices permission</string>
-    <string name="permission_microphone">microphone permission</string>
-    <string name="permission_phone">phone permission</string>
-    <string name="permission_call_logs">call logs permission</string>
-    <string name="permission_body_sensors">body sensors permission</string>
-    <string name="permission_body_sensors_background">background body sensors permission</string>
-    <string name="permission_activity_recognition_api29">physical activity permission</string>
-    <string name="permission_activity_recognition_api30">physical activity permission</string>
-    <string name="permission_access_media_location">read media file location permission</string>
-    <string name="permission_sms">sms permission</string>
-    <string name="permission_storage">storage permission</string>
-    <string name="permission_post_notifications">send notification permission</string>
-    <string name="permission_image_and_video">image and video permission</string>
-    <string name="permission_music_and_audio">music and audio permission</string>
-    <string name="permission_get_installed_apps">get info about installed apps permission</string>
+    <string name="permission_calendar">日历权限</string>
+    <string name="permission_camera">相机权限</string>
+    <string name="permission_contacts">联系人权限</string>
+    <string name="permission_location">位置权限</string>
+    <string name="permission_location_background">后台位置权限</string>
+    <string name="permission_nearby_devices">附近设备访问权限</string>
+    <string name="permission_microphone">麦克风权限</string>
+    <string name="permission_phone">电话权限</string>
+    <string name="permission_call_logs">通话记录权限</string>
+    <string name="permission_body_sensors">身体传感器权限</string>
+    <string name="permission_body_sensors_background">后台身体传感器权限</string>
+    <string name="permission_activity_recognition_api29">步数传感器</string>
+    <string name="permission_activity_recognition_api30">步数传感器</string>
+    <string name="permission_access_media_location">读取媒体文件位置权限</string>
+    <string name="permission_sms">短信权限</string>
+    <string name="permission_storage">存储权限</string>
+    <string name="permission_post_notifications">发送通知权限</string>
+    <string name="permission_image_and_video">访问图片和视频权限</string>
+    <string name="permission_music_and_audio">访问音乐和音频权限</string>
+    <string name="permission_get_installed_apps">获取已安装应用信息权限</string>
 
-    <string name="permission_all_file_access">all file access permission</string>
-    <string name="permission_install_unknown_apps">install unknown apps permission</string>
-    <string name="permission_display_over_other_apps">display over other apps permission</string>
-    <string name="permission_modify_system_settings">modify system settings permission</string>
-    <string name="permission_allow_notifications">allow notifications permission</string>
-    <string name="permission_allow_notifications_access">allow notifications access permission</string>
-    <string name="permission_apps_with_usage_access">apps with usage access permission</string>
-    <string name="permission_alarms_reminders">alarms &amp; reminders permission</string>
-    <string name="permission_do_not_disturb_access">do not disturb access permission</string>
-    <string name="permission_ignore_battery_optimize">ignore battery optimize permission</string>
-    <string name="permission_picture_in_picture">picture-in-picture permission</string>
-    <string name="permission_vpn">\tVPN\tpermission</string>
+    <string name="permission_all_file_access">所有文件访问权限</string>
+    <string name="permission_install_unknown_apps">安装未知来源应用权限</string>
+    <string name="permission_display_over_other_apps">在其他应用上层显示权限</string>
+    <string name="permission_modify_system_settings">修改系统设置权限</string>
+    <string name="permission_allow_notifications">允许通知权限</string>
+    <string name="permission_allow_notifications_access">允许通知访问权限</string>
+    <string name="permission_apps_with_usage_access">已获使用权限的应用</string>
+    <string name="permission_alarms_reminders">闹钟 &amp; 提醒权限</string>
+    <string name="permission_do_not_disturb_access">免打扰访问权限</string>
+    <string name="permission_ignore_battery_optimize">忽略电池优化权限</string>
+    <string name="permission_picture_in_picture">画中画权限</string>
+    <string name="permission_vpn">\tVPN\t权限</string>
 
-    <string name="permission_description_demo">Used for xx business</string>
-    <string name="permission_notification_listener_toast">A new notification message was listened for with the title: %s and the content: %s</string>
-    <string name="permission_description">permission_description</string>
-    <string name="permission_message">permission_message</string>
+    <string name="permission_description_demo">用于 xx 业务</string>
+    <string name="permission_notification_listener_toast">监听到一条新的通知消息，标题：%s，内容：%s</string>
+    <string name="permission_description">权限描述</string>
+    <string name="permission_message">权限信息</string>
 </resources>
