完成星座主页面

--- a/nowinandroid/feature/module_constellate/src/main/res/values-en/strings.xml
+++ b/nowinandroid/feature/module_constellate/src/main/res/values-en/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="constellate_app_name">module_constellate</string>
-
+    <string name="constellate_fate_toolbar_title">Fate</string>
 </resources>
