--- a/nowinandroid/feature/module_constellate/src/main/res/values/strings.xml
+++ b/nowinandroid/feature/module_constellate/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="constellate_app_name">星座</string>
-
+    <string name="constellate_fate_toolbar_title">星座运势</string>
 </resources>
