完善星座运势(60%)

--- a/nowinandroid/feature/module_constellate/src/main/res/values-en/strings.xml
+++ b/nowinandroid/feature/module_constellate/src/main/res/values-en/strings.xml
@@ -2,4 +2,5 @@
     <string name="constellate_app_name">module_constellate</string>
     <string name="constellate_fate_toolbar_title">Fate</string>
     <string name="constellate_detail_toolbar_title">fate</string>
+    <string name="constellate_today_fortune_title">Today Fortune</string>
 </resources>
