--- a/nowinandroid/core/library_permiss/src/main/res/values-en/strings.xml
+++ b/nowinandroid/core/library_permiss/src/main/res/values-en/strings.xml
@@ -9,6 +9,10 @@
     <string name="permission_fail_assign_hint_1">Failed to request permission, please grant \"%s\" manually</string>
     <string name="permission_fail_assign_hint_2">Failed to request permission, please agree to grant %s</string>
 
+    <string name="permission_fail_hint_1">Failed to request the %s，please select \"%s\" option</string>
+    <string name="permission_fail_hint_2">Failed to request the %s，please select \"%s\" option and enable the \"%s\" option</string>
+    <string name="permission_fail_hint_3">Failed to request the %s，please enable the \"%s\" option</string>
+
     <string name="permission_location_fail_hint_1">Failed to request the background location permission, please select \"%s\" option in the location permission</string>
     <string name="permission_location_fail_hint_2">Failed to request background location permission,please select \"%s\" option</string>
     <string name="permission_location_fail_hint_3">Failed to request the precise location permission. please enable the \"precise location\" option in the location permission</string>
@@ -20,13 +24,13 @@
     <string name="permission_sensors_fail_hint_2">Failed to request background body sensor permission, please select \"%s\" option</string>
     <string name="permission_sensors_fail_hint_3">Failed to request the body sensor permission, please select \"%s\" option in the body sensor permission</string>
 
-    <string name="permission_background_default_option_label_api29">allow all the time</string>
-    <string name="permission_background_default_option_label_api30">@string/permission_background_default_option_label_api29</string>
+    <string name="permission_allow_all_option">Allow all</string>
+    <string name="permission_allow_all_the_time_option">Allow all the time</string>
     <string name="permission_go_to_authorization">Go to authorization</string>
 
     <string name="permission_comma">, </string>
     <string name="permission_colon">: </string>
-
+    <string name="permission_and"> and </string>
     <string name="permission_unknown">permission</string>
     <string name="permission_unknown_description">you need to apply for this permission first before you can continue to use this service</string>
 
@@ -41,6 +45,10 @@
 
     <string name="permission_location">location permission</string>
     <string name="permission_location_description">allows accessing real-time location to display nearby services, plan navigation routes, or recommend location-based content.</string>
+
+    <string name="permission_location_fine">precise location permission</string>
+    <string name="permission_location_fine_option">precise location</string>
+
 
     <string name="permission_location_background">background location permission</string>
     <string name="permission_location_background_description">allows continuous location access in the background for real-time track recording, background navigation, or emergency location sharing.</string>
@@ -63,6 +71,17 @@
     <string name="permission_body_sensors_background">background body sensors permission</string>
     <string name="permission_body_sensors_background_description">allows continuous physiological data access in the background for sleep monitoring, 24/7 health tracking, or emergency health alerts.</string>
 
+
+    <string name="permission_health_data">fitness and wellness data permission</string>
+    <string name="permission_health_data_description">@string/permission_body_sensors_description</string>
+
+    <string name="permission_health_data_background">background fitness and wellness data permission</string>
+    <string name="permission_health_data_background_option">Access fitness and wellness data in the background</string>
+    <string name="permission_health_data_background_description">@string/permission_body_sensors_background_description</string>
+
+    <string name="permission_health_data_past">past fitness and wellness data permission</string>
+    <string name="permission_health_data_past_option">Access past fitness and wellness data</string>
+    <string name="permission_health_data_past_description">access past fitness and health data to determine your current physical condition.</string>
     <string name="permission_activity_recognition_api29">physical activity permission</string>
     <string name="permission_activity_recognition_api30">physical activity permission</string>
     <string name="permission_activity_recognition_description">allows recognizing activities (e.g., walking, running) for automatic exercise mode switching, activity data statistics, or fitness plan creation.</string>
