初步完成开眼推荐模块主页面item

--- a/nowinandroid/feature/module_eye_recommend/src/main/res/values/strings.xml
+++ b/nowinandroid/feature/module_eye_recommend/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="eye_recommend_app_name">module_eye_recommend</string>
+    <string name="eye_recommend_video_title">Recommend</string>
 </resources>
