--- a/nowinandroid/feature/module_web/src/main/res/values-en/strings.xml
+++ b/nowinandroid/feature/module_web/src/main/res/values-en/strings.xml
@@ -9,4 +9,6 @@
     <string name="web_collect_article">Collect</string>
     <string name="web_share_article_url">%1$s share【%2$s】：%3$s</string>
     <string name="web_success_collect">Success collect</string>
+    <string name="web_network_error">Network error. Please try again later</string>
+    <string name="web_view_please_retry">Please tap the page to retry</string>
 </resources>
