--- a/nowinandroid/feature/module_web/src/main/res/values/strings.xml
+++ b/nowinandroid/feature/module_web/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="web_success_collect">收藏成功</string>
     <string name="web_network_error">网络遇到了一些问题</string>
     <string name="web_view_please_retry">请点击页面重试</string>
+    <string name="web_loading">加载中...</string>
 </resources>
